fix(MoodCard): fix overflow issue for very long words in exploration field

--- a/client/src/components/shared/MoodCard/style.css
+++ b/client/src/components/shared/MoodCard/style.css
@@ -12,6 +12,7 @@
 .m-mood-card__exploration {
   grid-column-start: 2;
   line-height: 1;
+  word-break: break-word;
 }
 
 .m-mood-card__heading {
